--- a/welcomepage.css
+++ b/welcomepage.css
@@ -6,15 +6,14 @@ body{
     font-family: arial;
     font-weight: 300;
     background: url(letter-bg.jpg) no-repeat;
-    background-size: 120%;
-    
+    background-size: cover;
 }
 
 #login-box {
     position: relative;
     margin: 11% auto;
     float: right;
-    height: 500px;
+    height: 400px;
     width: 600px;
     border-radius: 25px;
     background-color: rgba(0,0,0,0.1);
@@ -53,6 +52,7 @@ input[type="password"]{
     font-weight: 400;
     font-size: 15px;
     transition: 0.2s ease;
+    color: white;
 }
 input[type="submit"]{
     margin-bottom: 28px;
@@ -97,7 +97,6 @@ input[type="submit"]:focus{
     padding: 40px;
     width: 300px;
     height: 400px;
-   
     background-size: cover;
     background-position: center;
 }
@@ -111,6 +110,11 @@ input[type="submit"]:focus{
     text-align: center;
     text-shadow: 0 2px 4px rgba(0,0,0,0.6);
 }
+
+.sosmed:hover {
+    color: #4939dd;
+}
+
 button{
     margin-bottom: 15px;
     width: 220px;
@@ -125,14 +129,13 @@ button{
 }
 .facebook{
     background: #32508e;
-   
     position: center;
 }
 .twitter{
-    background: #dd4b39;
+    background: #339bf0;
    
 }
 .google{
-    background: #dd4b39;
+    background: rgb(163, 6, 6);
     
 }
