--- a/welcomepage.css
+++ b/welcomepage.css
@@ -5,19 +5,21 @@ body{
     color: #55acee;
     font-family: arial;
     font-weight: 300;
-    background: url(letter-bg.jpg) no-repeat;
+    background: url("bg.png") no-repeat;
     background-size: cover;
 }
+
 
 #login-box {
     position: relative;
     margin: 11% auto;
     float: right;
-    height: 400px;
+    height: 280px;
     width: 600px;
     border-radius: 25px;
     background-color: rgba(0,0,0,0.1);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 6.);
+    margin-right: 60px;
 }
 .left-box{
     position: absolute;
@@ -27,6 +29,7 @@ body{
     padding: 40px;
     width: 300px;
     height: 400px;
+    background-color:rgba(0,0,0,0.1);
     
 }
 h1{
@@ -34,6 +37,7 @@ h1{
     text-align: center;
     font-weight: 300;
     font-size : 28px;
+    color: #fff;
    
 }
 input[type="text"],
@@ -56,7 +60,7 @@ input[type="password"]{
 }
 input[type="submit"]{
     margin-bottom: 28px;
-    width: 120px;
+    width: 220px;
     height: 32px;
     background: #f44336;
     border: none;
@@ -93,19 +97,19 @@ input[type="submit"]:focus{
     position: absolute;
     top: 0;
     right: 0;
-    box-sizing: border-box;
-    padding: 40px;
+    background-color: rgba(0,0,0,0.1);
+    justify-content: center;
     width: 300px;
     height: 400px;
     background-size: cover;
     background-position: center;
 }
-.right-box .signinwith{
+.right-box .sosmed{
     display: block;
-    margin-bottom: 40px;
-    margin-top: 40px;
-    font-size: 28px;
-    background-color: rgba(0,0,0,0.1);
+    margin-bottom: auto;
+    margin-top: 121px;
+    font-size: 15px;
+    background-color: rgba(0,0,0,0);
     padding: 11px;
     text-align: center;
     text-shadow: 0 2px 4px rgba(0,0,0,0.6);
@@ -130,12 +134,54 @@ button{
 .facebook{
     background: #32508e;
     position: center;
+    margin-bottom:15px;
 }
 .twitter{
     background: #339bf0;
+    margin-bottom: 15px;
    
 }
 .google{
     background: rgb(163, 6, 6);
     
+}
+
+.header {
+    display: block;
+    width: 100%;
+    height: 60px;
+    background-color: rgba(5, 4, 4, 0.3);
+    margin-top: 0px;
+    position: absolute;
+    z-index: -100;
+}
+.header h1 {
+    text-align: left;
+    margin-left: 160px;
+    font-family: Viga;
+    font-size: 32px;
+    margin-top: 10px;
+}
+
+.heading-center {
+    position: absolute;
+    margin-top: 150px;
+    margin-bottom: auto;
+    margin-left: 100px;
+}
+
+.heading-center h1 {
+    font-size: 80px;
+    text-shadow: 5px 2px 2px #150666;
+    text-align: left;
+    margin-bottom: 50px;
+    font-weight: bold;
+}
+
+
+.heading-center h3 {
+    font-size: 30px;
+    color: white;
+    text-shadow: 5px 2px 2px #150666;
+    font-family: 'Josefin Sans', sans-serif;
 }
