--- a/welcomepage.css
+++ b/welcomepage.css
@@ -5,7 +5,7 @@ body{
     color: #55acee;
     font-family: arial;
     font-weight: 300;
-    background: url("bg.jpeg") no-repeat;
+    background: url("bg.png") no-repeat;
     background-size: 110%;
 }
 
